Fix footer so it always aligns with bottom of page even if nothing has been searched yet

--- a/public/index.css
+++ b/public/index.css
@@ -2,17 +2,27 @@ html {
     background-color: hsl(188, 18%, 88%);
     font-family: Helvetica, Arial, sans-serif;
     font-size: 18px;
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin-bottom: 1.5rem;
 }
 
 footer {
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     height: 1.5rem;
     text-align: center;
-    margin-top: 0;
+    margin: 0 auto;
+
 }
 
 footer h4 {
     color: #fff;
     font-size: .75rem;
-    padding-top: .2rem;
+    margin-top: .2rem;
 }
